--- a/less/main/_partials/bootstrap-theme.less
+++ b/less/main/_partials/bootstrap-theme.less
@@ -159,10 +159,10 @@
   }
 }
 .btn-language{
-  .btn-styles(#000);
   color: #fff;
   border: 0;
-  position: absolute;
+  position: relative;
+  float: left;
   top: 1px;
   right: 1px;
   .border-radius(0);
@@ -211,6 +211,7 @@
   border: 0;
   font-weight: normal;
   margin: 0;
+  font-family: @headings-font-family;
 
   .navbar-nav >li{
     @media screen and (min-width: @screen-sm-min){
@@ -225,27 +226,55 @@
     }
   }
 
-  .navbar-nav li a{
-    &::after,
-    &:after{
-      content: '';
-      display: block;
-      position: relative;
-      width: 0;
-      height: 0;
-      margin-top: 2px;
-      border-bottom: 1px solid @link-color;
-      @transition: all 0.2s ease-in-out;
-      .transition(@transition);
-    }
-    &:hover{
-      background-color: transparent;
+  .navbar-nav {
+    > li > a {
+      color: @navbar-default-link-color;
+
+      &:hover,
+      &:focus {
+        color: @navbar-default-link-hover-color;
+        background-color: @navbar-default-link-hover-bg;
+      }
+
       &::after,
       &:after{
         content: '';
-        width: 100%;
+        display: block;
+        position: relative;
+        width: 0%;
+        height: 0;
+        margin-top: 2px;
+        border-bottom: 1px solid @text-color;
         @transition: all 0.2s ease-in-out;
         .transition(@transition);
+      }
+      &:hover{
+        background-color: transparent;
+        color: @navbar-default-link-hover-color;
+        &::after,
+        &:after{
+          content: '';
+          width: 100%;
+          border-bottom: 1px solid @link-color;
+          @transition: all 0.2s ease-in-out;
+          .transition(@transition);
+        }
+      }
+    }
+    > .active > a {
+      &,
+      &:hover,
+      &:focus {
+        color: @navbar-default-link-active-color;
+        background-color: @navbar-default-link-active-bg;
+      }
+    }
+    > .disabled > a {
+      &,
+      &:hover,
+      &:focus {
+        color: @navbar-default-link-disabled-color;
+        background-color: @navbar-default-link-disabled-bg;
       }
     }
   }
