--- a/less/main/variables/variables.less
+++ b/less/main/variables/variables.less
@@ -4,7 +4,7 @@
 // Local Main Variables
 
 //## Layout
-@header-height: 70px;
+@header-height: 34px;
 @img-folder: '/static/images';
 
 @brand-primary:         #ed1c24;
@@ -14,9 +14,9 @@
 @brand-danger:          #d9534f;
 
 //** Background color for `<body>`.
-@body-bg:               #ebebeb;
+@body-bg:               #d8d8d8;
 //** Global text color on `<body>`.
-@text-color:            #505050;
+@text-color:            #7a7a7a;
 
 //** Global textual link color.
 @link-color:            #ed1c24;
@@ -29,7 +29,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  "Roboto Regular", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
@@ -53,7 +53,7 @@
 
 //** By default, this inherits from the `<body>`.
 
-@headings-font-family:    'Noticia Text', serif;
+@headings-font-family:    'Roboto Bold', serif;
 @headings-font-weight:    700;
 @headings-line-height:    1.1;
 @headings-color:          #000;
@@ -135,6 +135,24 @@
 //** Textual separator for between breadcrumb elements
 @breadcrumb-separator:          ">";
 
+//== Container sizes
+//
+//## Define the maximum width of `.container` for different screen sizes.
+
+// Small screen / tablet
+@container-tablet:             (720px + @grid-gutter-width);
+//** For `@screen-sm-min` and up.
+@container-sm:                 @container-tablet;
+
+// Medium screen / desktop
+@container-desktop:            (940px + @grid-gutter-width);
+//** For `@screen-md-min` and up.
+@container-md:                 @container-desktop;
+
+// Large screen / wide desktop
+@container-large-desktop:      (1000px + @grid-gutter-width);
+//** For `@screen-lg-min` and up.
+@container-lg:                 @container-large-desktop;
 
 //== Navbar
 //
@@ -148,15 +166,15 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #505050;
-@navbar-default-bg:                #f8f8f8;
+@navbar-default-color:             #929799;
+@navbar-default-bg:                #303030;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
 @navbar-default-link-color:                @navbar-default-color;
-@navbar-default-link-hover-color:          @link-hover-color;
+@navbar-default-link-hover-color:          #ec4030;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         @link-hover-color;
+@navbar-default-link-active-color:         @navbar-default-link-hover-color;
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
 @navbar-default-link-disabled-color:       lighten(@link-color, 20%);
 @navbar-default-link-disabled-bg:          transparent;
